# USB_Cellular

./: .gitignore  CLAUDE.md  README.md  airbridge.service  config.yaml  e2e_test.py  main.py  pytest.ini  requirements.txt  setup_readonly.sh  web_status.py
.claude/agents/: esp32-s3-deployer.md
aircraft_data/: bore-20260320-185533.txt  downloadReport.txt  dsuCookie.easdf  metrics__dsuMetric.2.eacmf  metrics__dsuMetric.3.eacmf  metrics__dsuMetric.4.eacmf  metrics__dsuMetric.5.eacmf  metrics__dsuMetric.6.eacmf  metrics__dsuMetric.7.eacmf  metrics__dsuMetric.8.eacmf  metrics__dsuMetric.eacmf  metrics__dsuUsage.eacuf
docs/: architecture.md  debugging.md  deployment.md  pi-legacy.md  testing.md  upload.md
esp32/: .gitignore  platformio.ini  sdkconfig.defaults  sdkconfig.esp32s3
esp32/emu/: main.cpp
esp32/include/: airbridge_cli.h  airbridge_display.h  airbridge_harvest.h  airbridge_http.h  airbridge_log.h  airbridge_modem.h  airbridge_proto.h  airbridge_runtime.h  airbridge_s3.h  sim_dsu.h  (+5 more)
esp32/src/: CMakeLists.txt  idf_component.yml  main.cpp
lambda/: presign.py
scripts/: commission.sh  coolgear.py  e2e_emulator.sh  e2e_test.sh  e2e_unified.sh  get_ftp_creds.py  http_receiver.py  speed_test.py  test_e2e_esp32.py  test_upload_resume.py
setup/: README.md  airbridge-web.service  deploy.sh  maintenance.sh  setup_otg.sh
src/: README.md
tests/: README.md  conftest.py  ftp_test.py  integration_test.py  sim7000_test.py  ssh_device_test.py  test_config.yaml  test_e2e.py  test_hardware.py  test_modem.py  test_system.py  test_unit.py  test_usb_write.py  usb_test.py
(+39 files in other folders)
